fixed mistake due to .toList() immutability