@@ -2,33 +2,40 @@ package greencity.service;
 
 import greencity.client.RestClient;
 import greencity.constant.ErrorMessage;
+import greencity.dto.event.EventDayDto;
 import greencity.dto.event.EventResponseDto;
 import greencity.dto.event.EventRequestDto;
 import greencity.entity.Event;
 import greencity.entity.EventDay;
+import greencity.entity.EventImages;
 import greencity.entity.User;
 import greencity.enums.Role;
 import greencity.exception.exceptions.NotFoundException;
 import greencity.exception.exceptions.UserHasNoPermissionToAccessException;
+import greencity.repository.EventImagesRepository;
 import greencity.repository.EventRepository;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
-
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class EventServiceImpl implements EventService {
     private final EventRepository eventRepo;
+    private final EventImagesRepository eventImagesRepo;
     private final ModelMapper modelMapper;
     private final RestClient restClient;
+    private final FileService fileService;
 
     /**
      * {@inheritDoc}
      */
     @Override
+    @Transactional
     public EventResponseDto update(EventRequestDto requestDto, String email, MultipartFile[] files) {
         Event eventToUpdate = eventRepo.findById(requestDto.getId())
             .orElseThrow(() -> new NotFoundException(ErrorMessage.EVENT_NOT_FOUND));
@@ -49,15 +56,23 @@ public class EventServiceImpl implements EventService {
                         eventDay.setEvent(eventToUpdate);
                         return eventDay;
                     })
-                    .toList();
-            eventToUpdate.getEventDays().addAll(daysToUpdate);
+                    .collect(Collectors.toList());
+
+            List<EventDay> toRemove = eventToUpdate.getEventDays().stream()
+                    .filter(day -> daysToUpdate.stream()
+                            .noneMatch(newDay -> newDay.getId().equals(day.getId())))
+                    .collect(Collectors.toList());
+            toRemove.forEach(day -> eventRepo.deleteEventDayByEventId(day.getId()));
+
+            eventToUpdate.setEventDays(daysToUpdate);
         }
         if (requestDto.getDescription() != null) {
             eventToUpdate.setDescription(requestDto.getDescription());
         }
 
-        eventRepo.save(eventToUpdate);
 
-        return modelMapper.map(eventToUpdate, EventResponseDto.class);
+
+        Event saved = eventRepo.save(eventToUpdate);
+        return modelMapper.map(saved, EventResponseDto.class);
     }
 }
